# samp-query

./: .env.example  CHANGELOG.md  Cargo.toml  GUIDE.md  README.md
api/: Cargo.toml
api/src/: error.rs  main.rs
benches/: benchmarks.rs
cli/: Cargo.toml
cli/src/: main.rs  output.rs
examples/: player_query.rs  rules_query.rs  simple_query.rs
src/: client.rs  error.rs  lib.rs  packet.rs  protocol.rs  types.rs  utils.rs
tests/: integration_tests.rs
